# GBNX-Gold-Trader

./: .gitignore  TODO.md  deploy-frontend.sh  setup-cloudflare-tunnel.md
backend/: .dockerignore  .env.example  BUILDKIT_FIX.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.buildkit  Dockerfile.minimal  GPU_REMOVAL_SUMMARY.md  Makefile  PRICING_INTEGRATION.md  README.md  README_DOCKER.md  SERVER_DEPLOYMENT_CHECKLIST.md  check-database-connectivity.sh  cleanup_server.sh  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements-minimal.txt  setup-docker-data.sh  setup-tmp-to-data.sh  test-deployment.sh
backend/bruno-collection/: Health Check.bru  README.md  bruno.json
backend/bruno-collection/Market/: Analyze Sentiment.bru  Get Latest News.bru  Get LiveChart Data.bru
backend/bruno-collection/Pricing/: Get Active Streams.bru  Get Gold OHLC.bru  Get MYR OHLC.bru  Get OHLC by Trading Pair.bru  Get Platinum OHLC.bru  Get SGD OHLC.bru  Get Silver OHLC.bru
backend/bruno-collection/Transactions/: Buy Gold.bru  Get All Balances.bru  Get Balance by Account.bru  Get Gold Price.bru  Sell Gold.bru
backend/bruno-collection/environments/: Development.bru  Production.bru
backend/docs/: database_description.md  procedure.md
backend/scripts/: run_server.sh  server.sh
backend/server/: Dockerfile
backend/sql_scripts/: create_gold_trade_procedure.sql
backend/src/: agent.py  app_config.py  base_agent.py  db.py  debug_print.py  llm.py  main.py  main_agent.py  schema.py  test.py  tools.py
backend/src/database_handler/: docling_handler.py  document_parser.py  qdrant_connector.py
backend/src/pricings/: __init__.py  batch_operations.py  cache.py  models.py  price_client.py  router.py  stream_manager.py  utils.py  websocket_client.py  websocket_router.py
backend/src/pydantic_agent/: all_tools.py  base.py  evaluator.py  general_chat.py  pricing_tools.py
backend/src/routers/: __init__.py  agent.py  facebook_webhook.py  news.py  pricing.py  transactions.py
backend/src/search_service/: __init__.py  base.py  google_search.py  image_scraper.py  news_api_search.py  news_search_summarize.py  perplexity_search.py  tavily_search.py  unified_search.py
backend/src/tests/: test_stream_chat.py
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.module.scss  App.tsx  index.css  main.tsx
frontend/src/app/: router.tsx
frontend/src/components/AIAssistant/: AIAssistant.tsx  ChatBubble.tsx  KnowledgeInputPanel.tsx  VisualizationPanel.tsx  aiResponses.ts
frontend/src/components/AIStudio/: AIStudio.tsx
frontend/src/components/Auth/: LoginModal.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/Dashboard/: DashboardHome.tsx
frontend/src/components/GoldAIAssistant/: GoldAIAssistantPage.tsx
frontend/src/components/KnowledgeBaseAgent/: KnowledgeBaseAgentPage.tsx
frontend/src/components/Landing/: LandingPage.module.scss  LandingPage.tsx
frontend/src/components/Layout/: DashboardLayout.tsx  Navbar.tsx
frontend/src/components/Market/: Market.tsx
frontend/src/components/MarketAnalystAgent/: MarketAnalystAgentPage.tsx
frontend/src/components/News/: MarketNews.tsx
frontend/src/components/Portfolio/: AllocationChart.tsx  AssetValueChart.tsx  PNLChart.tsx  Portfolio.tsx
frontend/src/components/Profile/: Profile.tsx
frontend/src/components/RiskManagerAgent/: RiskManagerAgentPage.tsx
frontend/src/components/SentimentAnalysisAgent/: SentimentAnalysisAgentPage.tsx
frontend/src/components/TechnicalAnalystAgent/: TechnicalAnalystAgentPage.tsx
frontend/src/components/Transactions/: BalancesPage.tsx  TradePage.tsx
frontend/src/contexts/: AuthContext.tsx  PriceContext.tsx
frontend/src/helpers/: media.ts
frontend/src/hooks/: useGoldData.ts
frontend/src/services/: newsApi.ts
frontend/src/store/: hooks.ts  store.ts
frontend/src/store/sagas/: appSaga.ts  rootSaga.ts
frontend/src/store/slices/: appSlice.ts
frontend/src/styles/: _base.scss  _mixins.scss  _tokens.scss  _utilities.scss  globals.scss
frontend/src/types/: index.ts
