[project]
name = "Nexira-Copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.3"
dependencies = [
    "fastmcp>=0.1.0",
    "awscli>=1.41.4",
    "boto3>=1.39.4",
    "einops>=0.8.1",
    "fastapi>=0.116.0",
    "flashrank>=0.2.10",
    "langchain>=1.0.3",
    "langchain-text-splitters>=0.3.8",
    "langchain-anthropic>=1.0.1",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=3.0.1",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.27",
    "langgraph==1.0.2",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "pyyaml>=6.0.2",
    "torch>=2.0.0",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
    "litellm>=1.56.1",
    "byteplus-python-sdk-v2>=3.0.18",
    "python-multipart>=0.0.20",
    "xai-sdk>=1.4.0",
    "dashscope>=1.25.1",
    "crewai>=1.6.0",
    "python-jose>=3.5.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "google-genai>=1.52.0",
    "redis>=7.1.0",
    "docling>=2.64.0",
    "langchain-tavily>=0.2.13",
    "rich>=14.2.0",
    "langchain-mcp-adapters>=0.1.12",
    "langfuse>=3.9.0",
    "pymupdf4llm>=0.2.7",
    "python-twitter-v2>=0.9.3",
    "markdown>=3.10",
    "beautifulsoup4>=4.14.3",
    "pymupdf-layout>=1.26.6",
    "itsdangerous>=2.2.0",
    "pydantic-ai>=1.47.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
